fix: style on mobile

--- a/assets/scss/_markdown.scss
+++ b/assets/scss/_markdown.scss
@@ -7,6 +7,7 @@ $block-level:
 // Block level elements:
 #{$block-level} {
   margin: 2rem auto;
+  padding: 0 0.5rem;
   max-width: $max-width;
 }
 
